--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -47,21 +47,21 @@
   <div class="row">
     <div class="col-lg-4 col-md-4 text-xs-center">
       <div class="feature">
-        <i class="icon-lg ion-earth wow fadeIn" data-wow-delay=".1s"></i>
+        <i class="fa fa-globe fa-5x" data-wow-delay=".1s"></i>
         <h6 class="text-uppercase">No Border</h6>
         <p class="text-muted m-b-0">Mel illud populo convenire ea. Quis aliquando definitionem sea an. Usu an alienum assentior, has in dicunt oportere.</p>
       </div>
     </div>
     <div class="col-lg-4 col-md-4 text-xs-center">
       <div class="feature">
-        <i class="icon-lg ion-social-bitcoin wow fadeInUp"></i>
+        <i class="fa fa-btc fa-5x"></i>
         <h6 class="text-uppercase">With Bitcoin</h6>
         <p class="text-muted m-b-0">Mel illud populo convenire ea. Quis aliquando definitionem sea an. Usu an alienum assentior, has in dicunt oportere.</p>
       </div>
     </div>
     <div class="col-lg-4 col-md-4 text-xs-center">
       <div class="feature">
-        <i class="icon-lg ion-ios-locked wow fadeIn" data-wow-delay=".1s"></i>
+        <i class="fa fa-lock fa-5x" data-wow-delay=".1s"></i>
         <h6 class="text-uppercase">It's Safe</h6>
         <p class="text-muted m-b-0">Mel illud populo convenire ea. Quis aliquando definitionem sea an. Usu an alienum assentior, has in dicunt oportere.</p>
       </div>
@@ -178,16 +178,16 @@
         <div class="row">
           <h6 class="wide-space text-xs-center text-uppercase">.Megane is Built thanks to these Sponsors</h6>
           <div class="col-sm-3 col-xs-6 text-xs-center">
-            <i class="icon-lg ion-social-bitcoin" title="html 5"></i>
+            <i class="fa fa-btc fa-5x" title="html 5"></i>
           </div>
           <div class="col-sm-3 col-xs-6 text-xs-center">
-            <i class="icon-lg ion-social-github" title="sass"></i>
+            <i class="fa fa-github fa-5x" title="sass"></i>
           </div>
           <div class="col-sm-3 col-xs-6 text-xs-center">
-            <i class="icon-lg ion-social-apple" title="javascript"></i>
+            <i class="fa fa-apple fa-5x" title="javascript"></i>
           </div>
           <div class="col-sm-3 col-xs-6 text-xs-center">
-            <i class="icon-lg ion-social-chrome-outline" title="css 3"></i>
+            <i class="fa fa-google fa-5x" title="css 3"></i>
           </div>
         </div>
       </div>
@@ -222,7 +222,7 @@
           </div>
           <div class="col-md-4 offset-md-4">
             <label></label>
-            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Send <i class="ion-android-arrow-forward"></i></button>
+            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Send <i class="fa fa-arrow-right"></i></button>
           </div>
         </form>
       </div>
@@ -264,8 +264,8 @@
       <div class="col-xs-12 col-sm-3 text-xs-right">
         <h6 class="text-uppercase">Follow</h6>
         <ul class="list-inline">
-          <li class="list-inline-item"><a rel="nofollow" href="" title="Twitter"><i class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
-          <li class="list-inline-item"><a rel="nofollow" href="" title="Facebook"><i class="icon-lg ion-social-facebook-outline"></i></a></li>
+          <li class="list-inline-item"><a rel="nofollow" href="" title="Twitter"><i class="fa fa-facebook fa-3x"></i></a>&nbsp;</li>
+          <li class="list-inline-item"><a rel="nofollow" href="" title="Facebook"><i class="fa fa-twitter fa-3x"></i></a></li>
         </ul>
       </div>
     </div>
