--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,7 +1,7 @@
 <header id="first">
   <div class="header-content">
     <div class="inner">
-      <h1>Got a <i class="ion-social-bitcoin"></i> to Invest?</h1>
+      <h1>Got a <i class="fa fa-btc"></i> to Invest?</h1>
       <h5 class="wow fadeIn text-normal wow fadeIn">A new, innovative way of micro-investment with Bitcoin.</h5>
       <a href="#two" class="btn btn-primary-outline btn-xl page-scroll wow fadeInUp m-t-3">Get Started</a>
     </div>
