--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -85,79 +85,90 @@
   <div class="card-group">
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="https://cdn-images-1.medium.com/max/2000/1*Kp_1wo-7a2HRD1n9u7symA.jpeg" alt="Card image cap">
+      <div class="bottom-btn">
+        <img class="card-img-top" src="https://cdn-images-1.medium.com/max/2000/1*Kp_1wo-7a2HRD1n9u7symA.jpeg" alt="Card image cap">
+      </div>
       <div class="card-block">
         <h4 class="card-title">SuitesVR.com</h4>
         <p class="card-text">First-ever innovative startup utilizing VR technology for people to try suits on even without visiting any store.</p>
       </div>
+      <button type="button" id="btn1" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.2</button>
     </div>
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="https://news.bitcoin.com/wp-content/uploads/2016/02/Africa.jpg" alt="Card image cap">
+      <img class="card-img-top" src="https://news.bitcoin.com/wp-content/uploads/2016/02/Africa.jpg" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Bitcoin & Company</h4>
-        <p class="card-text">A type of digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds, operating independently of a central bank.</p>
+        <p class="card-text">A type of digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds.</p>
       </div>
+      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 0.8</button>
     </div>
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="https://news.bitcoin.com/wp-content/uploads/2016/03/africa-bitcoin.jpg" alt="Card image cap">
+      <img class="card-img-top" src="https://news.bitcoin.com/wp-content/uploads/2016/03/africa-bitcoin.jpg" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Blockchanin Limited</h4>
         <p class="card-text">The blockchain is a technology that underlies bitcoin—conceived in 2008 and first implemented in 2009—where it serves as the public ledger for all transactions.</p>
       </div>
+      <button type="button" id="btn2" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 2.5</button>
     </div>
   </div>
   <div class="card-group">
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
+      <img class="card-img-top " src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Company A</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
+      <button type="button" id="btn3" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
+      <img class="card-img-top " src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">B Limited</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
+      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
+      <img class="card-img-top " src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">C.Co.Ltd.,</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
+      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
   </div>
   <div class="card-group">
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
+      <img class="card-img-top " src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Company A</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
+      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
+      <img class="card-img-top " src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">B Limited</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
+      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
-      <img class="card-img-top img-fluid" src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
+      <img class="card-img-top " src="http://png-2.vector.me/files/images/7/1/712296/global_vision_2020_thumb.png" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">C.Co.Ltd.,</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
+      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
   </div>
 <!-- /card-group -->
@@ -277,7 +288,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body text-xs-center">
-        <img src="//placehold.it/1200x700/222?text=..." id="galleryImage" class="center-block img-fluid">
+        <img src="//placehold.it/1200x700/222?text=..." id="galleryImage" class="center-block ">
         <p>
           <br>
           <button class="btn btn-primary btn-lg" data-dismiss="modal" aria-hidden="true">Close <i class="ion-android-close"></i></button>
