--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -92,7 +92,7 @@
         <h4 class="card-title">SuitesVR.com</h4>
         <p class="card-text">First-ever innovative startup utilizing VR technology for people to try suits on even without visiting any store.</p>
       </div>
-      <button type="button" id="btn1" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.2</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" id="btn1" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.2</button>
     </div>
     <!-- card -->
     <div class="card">
@@ -101,7 +101,7 @@
         <h4 class="card-title">Bitcoin & Company</h4>
         <p class="card-text">A type of digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds.</p>
       </div>
-      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 0.8</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 0.8</button>
     </div>
     <!-- card -->
     <div class="card">
@@ -110,7 +110,7 @@
         <h4 class="card-title">Blockchanin Limited</h4>
         <p class="card-text">The blockchain is a technology that underlies bitcoin—conceived in 2008 and first implemented in 2009—where it serves as the public ledger for all transactions.</p>
       </div>
-      <button type="button" id="btn2" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 2.5</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" id="btn2" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 2.5</button>
     </div>
   </div>
   <div class="card-group">
@@ -121,7 +121,7 @@
         <h4 class="card-title">Company A</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
-      <button type="button" id="btn3" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" id="btn3" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
@@ -130,7 +130,7 @@
         <h4 class="card-title">B Limited</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
-      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
@@ -139,7 +139,7 @@
         <h4 class="card-title">C.Co.Ltd.,</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
-      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
   </div>
   <div class="card-group">
@@ -150,7 +150,7 @@
         <h4 class="card-title">Company A</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
-      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
@@ -159,7 +159,7 @@
         <h4 class="card-title">B Limited</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
-      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
     <!-- card -->
     <div class="card">
@@ -168,7 +168,7 @@
         <h4 class="card-title">C.Co.Ltd.,</h4>
         <p class="card-text">Similique voluptatibus vis ei. Unum affert partem ne vim. Te mei dolores omittantur, per in mucius utamur consulatu. Mel ea impedit efficiantur comprehensam, alienum salutandi adolescens sea cu. Cu mel.</p>
       </div>
-      <button type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
+      <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-outline-primary btn-block invest">Invest <i class="fa fa-btc" title="btc"></i> 1.0</button>
     </div>
   </div>
 <!-- /card-group -->
@@ -321,6 +321,26 @@
         <p class="text-xs-center"><a href="https://medium.com/@bootply/bootstrap-4-whats-new-visual-guide-c84dd81d8387">Learn More</a></p>
         <br>
         <button class="btn btn-primary btn-lg" data-dismiss="modal" aria-hidden="true">OK <i class="ion-android-close"></i></button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header" style="text-align: center;">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Scan QR Below With Your Bitcoin App</h4>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        <h3>Total Ammout: <i class="fa fa-btc"></i> 1.2<br /></h3>
+        <img src="http://media.techtarget.com/rms/misc/qr_code_barcode.jpg" alt="">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Input Code</button>
       </div>
     </div>
   </div>
